updates on hero image

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <div id="pause"><i id="pauseButton" class="fa fa-pause"></i></div>
 
     <div id="welcome">
+      <img id="background-image" src="assets/grid.png" />
       <h1>
         Hello,
         <img
