Hide donorbox temporarily

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
       </div>
       <div id="donateBox">
-        <script
+        <!--<script
           src="https://donorbox.org/widget.js"
           paypalExpress="true"
         ></script>
@@ -151,7 +151,7 @@
           frameborder="0"
           scrolling="no"
           allow="payment"
-        ></iframe>
+        ></iframe>-->
       </div>
     </div>
   </div>
