--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css" />
+  <meta name='viewport' content='width=device-width;, initial-scale=1' />
 </head>
 
 <body>
