Improve navigation clickability and CTA

--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
     <div id="progressBar">
       <div id="gutter"></div>
       <div id="progress"></div>
-      <button id="section-intro"><div>Intro</div></button>
-      <button id="section-circle"><div>Drawing Circles</div></button>
-      <button id="section-animation"><div>Animation</div></button>
-      <button id="section-audio"><div>Audio</div></button>
-      <button id="section-webgl"><div>WebGL</div></button>
-      <button id="section-accessibility"><div>Accessibility</div></button>
-      <button id="section-tutorial">
+      <button id="section-intro" class="section-marker"><div>Intro</div></button>
+      <button id="section-circle" class="section-marker"><div>Drawing Circles</div></button>
+      <button id="section-animation" class="section-marker"><div>Animation</div></button>
+      <button id="section-audio" class="section-marker"><div>Audio</div></button>
+      <button id="section-webgl" class="section-marker"><div>WebGL</div></button>
+      <button id="section-accessibility" class="section-marker"><div>Accessibility</div></button>
+      <button id="section-tutorial" class="section-marker">
         <div>Tutorials & Documentation</div>
       </button>
-      <button id="section-contribute"><div>Contribute</div></button>
-      <button id="section-outro"><div>Outro</div></button>
+      <button id="section-contribute" class="section-marker"><div>Contribute</div></button>
+      <button id="section-outro" class="section-marker"><div>Outro</div></button>
     </div>
 
     <div id="pause"><i id="pauseButton" class="fa fa-pause"></i></div>
@@ -140,19 +140,10 @@
         </div>
       </div>
       <div id="donateBox">
-        <!--<script
-          src="https://donorbox.org/widget.js"
-          paypalExpress="true"
-        ></script>
-        <iframe
-          src="https://donorbox.org/embed/support-the-processing-foundation?language=en-us"
-          name="donorbox"
-          allowpaymentrequest="allowpaymentrequest"
-          seamless="seamless"
-          frameborder="0"
-          scrolling="no"
-          allow="payment"
-        ></iframe>-->
+<h1>Can You Chip In?</h1>
+<p>At Processing Foundation, we're imagining software that is creative, equitable, and accessible to all. The Processing Foundation relies on online donations to help us make creative coding accessible to everyone.</p>
+<p><strong>100% of your donation will directly fund software development</strong>, supporting the dedicated contributors who work tirelessly to keep our software up-to-date, reliable, and accessible. So if you want to support technology accessibility for all, <strong>please pitch in</strong>:</p>
+<a id=donateButton href="https://processingfoundation.org/donate?amount=25&amp;hide_donation_meter=true&amp;default_interval=m&amp;utm_content=%7B%22origin%22%3A%22https%3A%2F%2Fhello.p5js.org%22%2C%22shown%22%3A%223%22%7D&amp;utm_source=p5js.org&amp;utm_medium=banner&amp;utm_campaign=donation_banner">Donate</a>
       </div>
     </div>
   </div>
