CTA displays correctly on mobile

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       <img src="assets/cta-background.png" />
       <div class="panelContainer">
         <div class="panelHeader">
-          <h2>Thanks for Watching</h2>
-          <h3>Use the links below to find out more about p5.js.</h3>
+          <h1>Thanks for Watching</h1>
+          <p>Use the links below to find out more about p5.js.</p>
         </div>
 
         <div class="panelBody">
